Fix issue that was causing artwork to shift upwards if artist or album info was multi-line

--- a/app/assets/stylesheets/featured.scss
+++ b/app/assets/stylesheets/featured.scss
@@ -34,6 +34,7 @@
 
 #grid-title {
     font-family: "Circular";
+    max-height: 10px;
     font-size: 14px;
     line-height: 20px;
     letter-spacing: .015em;
@@ -59,6 +60,9 @@
     font-size: 14px;
     line-height: 20px;
     letter-spacing: .015em;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    max-height: 10px;
     color: white;
     opacity: 0.6;
     transition: opacity .05s linear;
